Fix style issues of overflowing popups.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -398,7 +398,6 @@ body {
 }
 
 .popup-content {
-    overflow-y: scroll;
     padding: 10px;
     color: #3b3c3d;
 }
@@ -517,6 +516,11 @@ body {
     left: 40%;
 }
 
+.transition-edge-editor .popup-content {
+    padding: 10px 20px 10px 10px;
+    overflow-y: auto;
+}
+
 .transition-edge-editor .popup-content > table {
     width: 100%;
     height: 100%;
@@ -554,7 +558,7 @@ body {
 }
 
 .transition-edge-editor .head-action-selector {
-    /* border: 2px solid #3b3c3d; */
+    min-width: 150px;
 }
 
 .transition-edge-editor .head-action-selector button {
